[gd_scene load_steps=8 format=3 uid="uid://caynm05p7b7ju"]

[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://characters/happy_boo/happy_boo.tscn" id="1_8wi5p"]
[ext_resource type="Script" uid="uid://dn6xj7dbeew4y" path="res://Changes_Player/player.gd" id="1_g4wrc"]
[ext_resource type="PackedScene" uid="uid://dxp4dftbanddf" path="res://Changes_Player/gun.tscn" id="3_vlwyt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g4wrc"]
radius = 47.0106

[sub_resource type="CircleShape2D" id="CircleShape2D_vlwyt"]
radius = 51.0392

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vlwyt"]
bg_color = Color(0.2757, 0.2757, 0.2757, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uaf6k"]
bg_color = Color(0.237227, 0.745821, 0.300094, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_g4wrc")

[node name="HappyBoo" parent="." instance=ExtResource("1_8wi5p")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -18)
shape = SubResource("CircleShape2D_g4wrc")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Gun" parent="." instance=ExtResource("3_vlwyt")]
unique_name_in_owner = true
position = Vector2(-1, -22)
rotation = 0.0703841

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -18)
shape = SubResource("CircleShape2D_vlwyt")
debug_color = Color(0.799512, 0.380321, 0.484245, 0.42)

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -89.0
offset_top = -142.0
offset_right = 90.0
offset_bottom = -115.0
theme_override_styles/background = SubResource("StyleBoxFlat_vlwyt")
theme_override_styles/fill = SubResource("StyleBoxFlat_uaf6k")
value = 100.0
show_percentage = false

[node name="LevelUpText" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -50.0
offset_top = -180.0
offset_right = 88.0
offset_bottom = -134.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 22
text = "Level up!"

[node name="Timer" type="Timer" parent="LevelUpText"]
unique_name_in_owner = true

[connection signal="upgradeGun" from="." to="Gun" method="_on_player_upgrade_gun"]
[connection signal="timeout" from="LevelUpText/Timer" to="." method="_on_timer_timeout"]
